adding bootstrap grid for rows and columns

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         
           </ul>
         </div>
-      </nav><button type="button" class="btn btn-success">Success</button>
+      </nav>
+      <div id="pie-zone" class="container"></div>
+
     <script src="./main.js"></script>
 </body>
 </html>
